<resources>
    <string name="app_name">justBar</string>

    <!-- Const Text -->
    <string name="const_app_name">justBAR</string>
    <string name="const_others">Others (Search and Sorting)</string>
    <string name="const_favourite">Favourite</string>
    <string name="const_cocktail_detail">Cocktail info</string>
    <string name="const_iba_cocktails">IBA Cocktails</string>
    <string name="const_all_cocktails">All Cocktails</string>
    <string name="const_ingredients">Ingredients</string>
    <string name="const_recipe">Recipe</string>
    <string name="const_suggestions">Suggestions</string>

    <!-- Buttons -->
    <string name="btn_base">Base</string>
    <string name="btn_sorting_by">Sort by...</string>

    <!-- Hints -->
    <string name="hint_search">Поиск</string>

    <!-- Taste Enum values -->
    <string name="taste_sweet">Sweet</string>
    <string name="taste_sour">Sour</string>
    <string name="taste_sweet_sour">Sweet-Sour</string>
    <string name="taste_strong">Strong</string>
    <string name="taste_salty">Salty</string>
</resources>
