<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/background_main">

    <TextView
        android:id="@+id/tv_fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        style="@style/Titles"
        tools:text="All Cocktails"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        android:src="@drawable/ic_back"
        android:background="@null"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"

        style="@style/inputTextLayout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            style="style/inputText"
            android:hint="@string/hint_search"
            android:inputType="text"
            tools:text="Свечи"

            android:background="@drawable/background_rectangle" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="12dp"

        app:layout_constraintTop_toTopOf="@+id/til_search"
        app:layout_constraintEnd_toEndOf="@+id/til_search"
        app:layout_constraintBottom_toBottomOf="@+id/til_search"

        android:src="@drawable/ic_search"

        android:background="@null"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sorting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingHorizontal="24dp"

        android:background="@drawable/background_rectangle"

        android:drawableStart="@drawable/ic_shuffle"
        android:drawableTint="@color/main"
        android:drawablePadding="8dp"
        android:text="@string/btn_sorting_by"
        style="@style/Titles"
        android:textColor="@color/main"
        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@+id/til_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_settings"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:paddingHorizontal="24dp"

        android:background="@drawable/background_rectangle"
        android:backgroundTint="@color/main"

        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_sort"
        android:text="@string/btn_base"
        style="@style/Titles"
        android:textSize="12sp"

        app:layout_constraintTop_toBottomOf="@+id/til_search"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cocktails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"

        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constraintTop_toBottomOf="@+id/btn_settings"
        app:layout_constraintBottom_toBottomOf="parent"

        tools:listitem="@layout/item_cocktail"/>

</androidx.constraintlayout.widget.ConstraintLayout>
